C++/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
12:49:55 **** Incremental Build of configuration Debug for project Lab3-10-2 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Lab3-10-2.o" "..\\src\\Lab3-10-2.cpp" 
g++ -o Lab3-10-2.exe "src\\Lab3-10-2.o" 
Info: Nothing to build for Lab3-10-2
Info: Nothing to build for Lab3-10-2
Info: Nothing to build for Tic Tac Toe
12:56:30 **** Incremental Build of configuration Debug for project Tic Tac Toe ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Tic Tac Toe.o" "..\\src\\Tic Tac Toe.cpp" 
g++ -o "Tic Tac Toe.exe" "src\\Tic Tac Toe.o" 
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file Tic Tac Toe.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
12:57:11 **** Incremental Build of configuration Debug for project Tic Tac Toe ****
Info: Internal Builder is used for build
g++ -o "Tic Tac Toe.exe" "src\\Tic Tac Toe.o" 
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file Tic Tac Toe.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
12:58:18 **** Incremental Build of configuration Debug for project Tic Tac Toe ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Tic Tac Toe.o" "..\\src\\Tic Tac Toe.cpp" 
g++ -o "Tic Tac Toe.exe" "src\\Tic Tac Toe.o" 
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file Tic Tac Toe.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
13:08:44 **** Incremental Build of configuration Debug for project Tic Tac Toe ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Tic Tac Toe.o" "..\\src\\Tic Tac Toe.cpp" 
..\src\Tic Tac Toe.cpp: In function 'void SmartCom(int)':
..\src\Tic Tac Toe.cpp:154:66: error: break statement not within loop or switch
   if(Board[0][2] == 2 && Board[1][1] == 2){if(Board[2][0]==1||2){break;}p = 1;}
                                                                  ^~~~~
13:09:20 **** Incremental Build of configuration Debug for project Tic Tac Toe ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Tic Tac Toe.o" "..\\src\\Tic Tac Toe.cpp" 
g++ -o "Tic Tac Toe.exe" "src\\Tic Tac Toe.o" 
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file Tic Tac Toe.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
13:12:59 **** Incremental Build of configuration Debug for project Tic Tac Toe ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Tic Tac Toe.o" "..\\src\\Tic Tac Toe.cpp" 
g++ -o "Tic Tac Toe.exe" "src\\Tic Tac Toe.o" 
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file Tic Tac Toe.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
13:15:02 **** Incremental Build of configuration Debug for project Tic Tac Toe ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Tic Tac Toe.o" "..\\src\\Tic Tac Toe.cpp" 
g++ -o "Tic Tac Toe.exe" "src\\Tic Tac Toe.o" 
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file Tic Tac Toe.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
13:18:55 **** Incremental Build of configuration Debug for project Tic Tac Toe ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Tic Tac Toe.o" "..\\src\\Tic Tac Toe.cpp" 
g++ -o "Tic Tac Toe.exe" "src\\Tic Tac Toe.o" 
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file Tic Tac Toe.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
13:21:53 **** Incremental Build of configuration Debug for project Tic Tac Toe ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Tic Tac Toe.o" "..\\src\\Tic Tac Toe.cpp" 
g++ -o "Tic Tac Toe.exe" "src\\Tic Tac Toe.o" 
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file Tic Tac Toe.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
Info: Nothing to build for Lab3-10-2
Info: Nothing to build for Lab3-10-1
13:40:29 **** Incremental Build of configuration Debug for project Tic Tac Toe ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Tic Tac Toe.o" "..\\src\\Tic Tac Toe.cpp" 
g++ -o "Tic Tac Toe.exe" "src\\Tic Tac Toe.o" 
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file Tic Tac Toe.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
13:43:32 **** Incremental Build of configuration Debug for project Tic Tac Toe ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Tic Tac Toe.o" "..\\src\\Tic Tac Toe.cpp" 
g++ -o "Tic Tac Toe.exe" "src\\Tic Tac Toe.o" 
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file Tic Tac Toe.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
13:46:40 **** Incremental Build of configuration Debug for project Tic Tac Toe ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Tic Tac Toe.o" "..\\src\\Tic Tac Toe.cpp" 
g++ -o "Tic Tac Toe.exe" "src\\Tic Tac Toe.o" 
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file Tic Tac Toe.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
13:47:59 **** Incremental Build of configuration Debug for project Tic Tac Toe ****
Info: Internal Builder is used for build
g++ -o "Tic Tac Toe.exe" "src\\Tic Tac Toe.o" 
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file Tic Tac Toe.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
13:53:04 **** Incremental Build of configuration Debug for project Tic Tac Toe ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Tic Tac Toe.o" "..\\src\\Tic Tac Toe.cpp" 
g++ -o "Tic Tac Toe.exe" "src\\Tic Tac Toe.o" 
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file Tic Tac Toe.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
